test/files/neg/t8417.check
t8417.scala:7: warning: adapted the argument list to the expected 2-tuple: add additional parens instead
        signature: T.f(x: Any)(y: Any): String
  given arguments: "hello", "world"
 after adaptation: T.f(("hello", "world"): (String, String))
  def g = f("hello", "world")("holy", "moly")
           ^
t8417.scala:7: warning: adapted the argument list to the expected 2-tuple: add additional parens instead
        signature: T.f(x: Any)(y: Any): String
  given arguments: "holy", "moly"
 after adaptation: T.f(("holy", "moly"): (String, String))
  def g = f("hello", "world")("holy", "moly")
                             ^
2 warnings
error: No warnings can be incurred under -Werror.
